# document-merge-service

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .gitlint  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATE.md  Makefile  README.md  USAGE.md  cmd.sh  commitlint.config.js  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: ghcr.yml  pypi.yml  tests.yml
docs/: migration-to-v10.md
document_merge_service/: cmd.sh  conftest.py  document_merge_service_metadata.py  gunicorn.py  sentry.py  settings.py  urls.py  wsgi.py
document_merge_service/api/: apps.py  authentication.py  engines.py  factories.py  file_converter.py  filters.py  jinja.py  logging.py  models.py  pagination.py  permissions.py  serializers.py  test_unoconv.py  unoconv.py  urls.py  views.py
document_merge_service/api/data/: __init__.py  created_with_libreoffice.docx  docx-template-filters.docx  docx-template-image-placeholder-header-footer.docx  docx-template-loopcontrols.docx  docx-template-placeholdercheck.docx  odt-template.odt  test.txt  xlsx-structure.xlsx  xlsx-syntax.xlsx  xlsx-template.xlsx
document_merge_service/api/data/loadtest/: 1.doc  2.docx  3.docx  4.docx
document_merge_service/api/management/commands/: clean_dangling_files.py  clean_dangling_objects.py  dms_encrypt_templates.py  upload_local_templates.py
document_merge_service/api/migrations/: 0001_initial.py  0002_template_group.py  0003_increase_slug_max_length.py  0003_template_meta.py  0004_cleanup_files.py  0005_xlsx_template_engine.py  0006_remove_template_group.py  0007_template_created_at_template_created_by_group_and_more.py  0008_alter_template_engine.py
document_merge_service/api/tests/: test_authentication.py  test_clean_dangling_files.py  test_convert.py  test_email_logging.py  test_encrypt_templates.py  test_excel.py  test_filter.py  test_filters.py  test_jinja.py  test_pagination.py  test_structure.py  test_template.py  test_unoconv.py  test_upload_local_templates.py
document_merge_service/api/tests/__snapshots__/: test_email_logging.ambr  test_template.ambr
document_merge_service/api/tests/data/: docx-mailmerge-syntax.docx  docx-mailmerge.docx  docx-template-filters.docx  docx-template-placeholdercheck.docx  docx-template-syntax.docx  docx-template.docx
document_merge_service/api/tests/snapshots/: snap_test_template.py
document_merge_service/tests/: test_sentry.py  test_settings.py
unoconv/: Dockerfile
